<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editorAlignRelative"
            >

            <ImageButton
                android:id="@+id/action_undo"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_undo_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_redo"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_redo_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_bold"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_bold_black_24dp"
                android:scaleType="fitXY" />

            <ImageButton
                android:id="@+id/action_italic"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_italic_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_subscript"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_expand_more_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_superscript"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_expand_less_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_strikethrough"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_strikethrough_s_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_underline"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_underlined_black_24dp"
                android:scaleType="fitXY"
                />


            <ImageButton
                android:id="@+id/action_txt_color"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_color_text_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_bg_color"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_color_fill_black_24dp"
                android:scaleType="fitXY"
                />


            <ImageButton
                android:id="@+id/action_indent"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_indent_increase_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_outdent"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_indent_decrease_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_align_left"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_align_left_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_align_center"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_align_justify_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_align_right"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_align_right_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_insert_bullets"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_list_bulleted_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_insert_numbers"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_list_numbered_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_blockquote"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_format_quote_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_insert_image"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_insert_photo_black_24dp"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/action_insert_link"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_insert_link_black_24dp"
                android:scaleType="fitXY"
                />
            <Button
                android:id="@+id/action_heading1"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@null"
                android:text="@string/h1" />
            <Button
                android:id="@+id/action_heading2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@null"
                android:text="@string/h2" />
            <Button
                android:id="@+id/action_heading3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@null"
                android:text="@string/h3" />
            <Button
                android:id="@+id/action_heading4"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@null"
                android:text="@string/h4" />
            <Button
                android:id="@+id/action_heading5"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@null"
                android:text="@string/h5" />
            <Button
                android:id="@+id/action_heading6"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@null"
                android:text="@string/h6" />

            <ImageButton
                android:id="@+id/action_insert_checkbox"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_check_black_24dp"
                android:scaleType="fitXY"
                />


        </LinearLayout>
    </HorizontalScrollView>

    <jp.wasabeef.richeditor.RichEditor
        android:id="@+id/editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.07" />

    <TextView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="0.15" />

</LinearLayout>

